--- a/app/templates/user_profile.html
+++ b/app/templates/user_profile.html
@@ -58,7 +58,7 @@
             <div><strong>Scouring The Web For Your Articles</strong></div>
         </div>
     </div>
-    <form id="mainform" onSubmit="return (showLoading('saveProfileBtn', 'mainform') && convertJson())" action="" method="">
+    <form id="mainform" onSubmit="return (showLoading('mainform') && convertJson())" action="" method="">
         <div class="table-responsive" style="margin-top: 20px;">
             <table class="table table-sm">
                 <thead class="text-uppercase">
@@ -187,12 +187,12 @@
                 <tbody id="newsSourceTable"></tbody>
             </table>
         </div>
-        <button id="saveProfileBtn" class="btn btn-primary" onclick="" type="submit" style="float: right;margin-right: 5px;" name="submitBtn" value="save">Save</button>
-<!--        <button class="btn btn-primary" type="submit" style="float: right;margin-right: 5px;" name="submitBtn" value="saveAndSubmit">Save</button>-->
-        <div class="custom-control custom-control-inline custom-switch" style="float: right;margin-top: 5px;">
-            <input class="custom-control-input" type="checkbox" id="formCheck-1" name="fetchArticles" value="true" checked="" disabled>
-            <label class="custom-control-label" for="formCheck-1">Fetch Articles on Save</label>
-        </div>
+        <button id="fetchWrkReadsBtn" class="btn btn-primary" onclick="localStorage.setItem('article_type', 'Profession');" type="submit" style="float: right;margin-right: 5px;" name="workReadsBtn" value="workReadsBtn">Fetch Work Reads</button>
+        <button id="fetchLeiReadsBtn" class="btn btn-primary" onclick="localStorage.setItem('article_type', 'Leisure');" type="submit" style="float: right;margin-right: 5px;" name="leiReadsBtn" value="leiReadsBtn">Fetch Leisure Reads</button>
+<!--        <div class="custom-control custom-control-inline custom-switch" style="float: right;margin-top: 5px;">-->
+<!--            <input class="custom-control-input" type="checkbox" id="formCheck-1" name="fetchArticles" value="true" checked="" disabled>-->
+<!--            <label class="custom-control-label" for="formCheck-1">Fetch Articles on Save</label>-->
+<!--        </div>-->
     </form>
     <div class="footer-basic">
         <footer>
@@ -220,8 +220,8 @@
         setCountries(countries);
 
         var sources = null;
-        var pref = {{ srcPref }};
-        addNewSources(sources, pref);
+        var scr_pref = {{ srcPref }};
+        addNewSources(sources, scr_pref);
 
         pref = {{ topicPref }};
         setPreferences(pref, ".form-control.topics");
@@ -230,7 +230,7 @@
         setPreferences(pref, ".form-control.general");
 
         var userprofile = {{ userprofile }};
-        setUserprofile(userprofile);
+        setUserprofile(userprofile, scr_pref);
 
         toggleLoginIcon();
     </script>
