--- a/app/templates/newsarticles.html
+++ b/app/templates/newsarticles.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="static/css/Navigation-Clean.css">
     <link rel="stylesheet" href="static/css/Navigation-with-Button.css">
     <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="static/css/loader.css">
+    <link rel="stylesheet" href="static/css/buttons.css">
 
     <script type="text/javascript" src="static/js/jquery.min.js"></script>
     <script type="text/javascript" src="static/js/setNewsArticles.js"></script>
@@ -19,14 +21,28 @@
 </head>
 
 <body>
+    <div id="loadingScreen" style="display: none;">
+        <div id="loader">
+            <div>
+            <span class="loader">↓</span>
+            <span class="loader" style="--delay: 0.1s;">↓</span>
+            <span class="loader" style="--delay: 0.3s;">↓</span>
+            <span class="loader" style="--delay: 0.4s;">↓</span>
+            <span class="loader" style="--delay: 0.5s;">↓</span>
+	        </div>
+        </div>
+        <div id="loader-text">
+            <div><strong>Scouring The Web For Your Articles</strong></div>
+        </div>
+    </div>
     <nav class="navbar navbar-light navbar-expand-md navigation-clean-button">
         <div class="container"><img src="static/img/newspapers-and-news-illustration.png" width="50"><a class="navbar-brand" href="#">News Package!</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav mr-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/userProfile">Your Profile</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" onclick="showLoading('', 'mainform')" href="/newsarticles">Your Work Reads</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" onclick="showLoading('', '')" href="/#">Your Leisure Reads</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" onclick="return showLoading('mainform') && fetchWorkArticles();" href="#">Your Work Reads</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" onclick="return showLoading('mainform') && fetchLeisureArticles();" href="#">Your Leisure Reads</a></li>
                     <li class="nav-item dropdown" style="display: none;"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">Placeholder Dropdown </a>
                         <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">First Item</a><a class="dropdown-item" role="presentation" href="#">Second Item</a><a class="dropdown-item" role="presentation" href="#">Third Item</a></div>
                     </li>
@@ -40,7 +56,7 @@
             </div>
         </div>
     </nav>
-    <form>
+    <form id = 'mainform'>
         <div>
             <table class="table">
                 <thead>
