--- a/app/templates/newsarticles.html
+++ b/app/templates/newsarticles.html
@@ -41,8 +41,8 @@
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav mr-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/userProfile">Your Profile</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" onclick="return showLoading('mainform') && fetchWorkArticles();" href="#">Your Work Reads</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" onclick="return showLoading('mainform') && fetchLeisureArticles();" href="#">Your Leisure Reads</a></li>
+                    <li class="nav-item" role="presentation"><a id="workarticles-link" class="nav-link" onclick="return showLoading('mainform') && fetchWorkArticles();" href="#">Your Work Reads</a></li>
+                    <li class="nav-item" role="presentation"><a id="leisurearticles-link" class="nav-link" onclick="return showLoading('mainform') && fetchLeisureArticles();" href="#">Your Leisure Reads</a></li>
                     <li class="nav-item dropdown" style="display: none;"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">Placeholder Dropdown </a>
                         <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">First Item</a><a class="dropdown-item" role="presentation" href="#">Second Item</a><a class="dropdown-item" role="presentation" href="#">Third Item</a></div>
                     </li>
@@ -257,6 +257,7 @@
         setNewsArticles(articles);
 
         toggleLoginIcon();
+        activateWorkLeisureLink();
     </script>
 </body>
 
