set default email in login page

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -60,7 +60,7 @@
             <h2 class="sr-only">Login Form</h2>
             <div class="illustration"><i class="icon ion-ios-navigate" style="color: rgb(105,215,215);"></i></div>
             <input type="hidden" name="hiddenEmail" value={{ userEmail }} />
-            <div class="form-group"><input class="form-control" type="email" name="email" required placeholder="Email" value="{{ userEmail }}"></div>
+            <div class="form-group"><input id="userEmail_form" class="form-control" type="email" name="email" required placeholder="Email" value="{{ userEmail }}"></div>
             <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Password" style="display: none;"></div>
             <div class="form-group signInBtn"><button class="btn btn-primary btn-block" name="submitBtn" value="signIn" type="submit" style="background-color: rgb(105,215,215);">Log In</button></div>
             <div class="form-group signOutBtn"><button class="btn btn-primary btn-block" name="submitBtn" value="signOut" type="submit" style="background-color: rgb(105,215,215);">Log Out</button></div>
@@ -86,6 +86,9 @@
         toggleLoginIcon();
         toggleLoginButton();
         activateProfileLink();
+        if ($("#userEmail_form").attr("value") == 0){
+            $("#userEmail_form").attr("value", "youremail@domain.com");
+        }
     </script>
 </body>
 
