--- a/app/templates/user_profile.html
+++ b/app/templates/user_profile.html
@@ -69,7 +69,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td><input class="form-control email" type="email" name="userEmail" placeholder="youremail@domain.com" autocomplete="on" required="" value={{ userEmail }}></td>
+                        <td><input class="form-control email" type="email" name="userEmail" autocomplete="on" readonly required value={{ userEmail }}></td>
                     </tr>
                 </tbody>
             </table>
