--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -56,6 +56,7 @@
         </div>
     </div>
     <div class="login-clean">
+        <p style="text-align: center;">Tried of spending time looking for what news article to read? Let our News Curator app help you by taking into account your personal preferences.</p>
         <form id="mainform" action="/login" method="POST">
             <h2 class="sr-only">Login Form</h2>
             <div class="illustration"><i class="icon ion-ios-navigate" style="color: rgb(105,215,215);"></i></div>
